# diperan

./: .gitignore  .yo-rc.json  CMakeLists.txt  Makefile  README.md  configure  doxygen_warnings.txt
doc/html/: annotated.html  classconsumer.html  classes.html  classproducer.html  consumer_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  producer_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
flatbuffers/: system_info.fbs
include/: daemon.h  getCommandLineOptions.h  init.h  mainVariables.h  optional.h  packet_type_definitions.h
include/Diperan/: MyClass.hpp
include/benchmarking/algorithms/: simple_matrix_mul.h
include/flatbuffers/: benchmark_results_generated.h
include/master/: master.h
include/network/outgoing/: sender.h
include/processing/incoming/: in_processor.h
include/processing/incoming/master/: in_processor_helpers_m.h
share/CppUtility/: CMakeLists.txt
share/CppUtility/src/: MyUtility.cxx
src/: init.cpp  main.cpp
src/Diperan/: MyClass.cpp  init.cpp  main.cpp
src/Diperan/benchmarking/: counters.cpp  run_benchmark.cpp
src/Diperan/benchmarking/benchmarks/: crc32.cpp  matrix_multiplication.cpp  matrix_multiplication.h  sha2.cpp
src/Diperan/hardware/: find_supported_events.cpp
src/Diperan/include/: daemon.h  getCommandLineOptions.h
src/Diperan/include/flatbuffers/: flatbuffer_node_configuration_decode.h
src/Diperan/master/helpers/: command_pkt_creation.cpp  command_pkt_creation.h
src/Diperan/processing/incoming/: in_processor.cpp
src/Diperan/processing/outgoing/: packet_creation.cpp  packet_creation.h
src/benchmarking/: counters.cpp  counters.h  run_benchmark.cpp  run_benchmark.h
src/benchmarking/algorithms/: miniz.c
src/benchmarking/benchmarks/: crc32.cpp  crc32.h  matrix_multiplication.cpp  sha2.cpp  sha2.h
src/hardware/: find_supported_events.cpp  find_supported_events.h
src/hardware/system_info/: system_info.cpp  system_info.h
src/include/: Logger.h  mainVariables.h  optional.h
src/include/flatbuffers/: event_info_generated.h  flatbuffer_benchmark_results_decode.h  flatbuffer_events_info_decode.h  flatbuffer_sys_info_decode.h  node_configuration_generated.h  system_info_generated.h
src/master/: master.cpp  master.h
src/master/helpers/: command_pkt_creation.cpp  command_pkt_creation.h
src/network/incoming/: listener.cpp  listener.h
src/network/outgoing/: sender.cpp
src/processing/incoming/master/: in_processor_helpers_m.cpp
src/processing/incoming/node/: in_processor_helpers_n.cpp  in_processor_helpers_n.h
src/processing/outgoing/: packet_creation.cpp
src/processing/outgoing/master/: peer_discovery.cpp  peer_discovery.h  peer_discovery_helpers.cpp  (+3 more)
systemd_service/: diperan.service
test/: Global.test.hpp  Main.test.cxx  Setup.test.hpp
test/Diperan/: MyClass.test.cpp
tools/cmake/: DiperanConfig.cmake.in  DiperanConfigVersion.cmake.in  UninstallTarget.cmake.in
(+5 files in other folders)
